# agenteval

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  action.yml  agents.yaml  cli.py  compat.py  docker-compose.yml  pyproject.toml  rbac.example.yaml  requirements.txt
adapters/: __init__.py  _utils.py  agentic_data_analyst.py  autogen.py  base.py  contract_shield.py  crewai.py  data_analyst.py  langgraph.py  openai_agents.py  scheme_saathi.py
baselines/: data_analyst.json
core/: __init__.py  _fsutil.py  alerts.py  audit.py  calibration.py  ci_matrix.py  ci_preflight.py  compare.py  config.py  conversation.py  dataset_import.py  flakiness.py  generator.py  history.py  init.py  judge.py  metrics.py  model_compare.py  pricing.py  provenance.py  rag_metrics.py  rbac.py  redteam.py  registry.py  report.py  runner.py  schema.py  server.py  significance.py  store.py  template_catalog.py  tool_efficiency.py  trace.py  trace_view.py  trajectory.py  trajectory_diff.py
dashboard/: __init__.py  app.py
docs/: compatibility.md  multi-turn-evaluation.md  plugins.md  redteam-generation.md  templates.md  tool-efficiency.md  v1-readiness.md
docs-site/: README.md  adapter-guide.html  cli-reference.html  comparison.html  index.html  package.json  script.js  styles.css
evaluators/: __init__.py  _registry.py
examples/: __init__.py
examples/plugins/agenteval-json-schema-evaluator/: README.md  pyproject.toml
examples/plugins/agenteval-json-schema-evaluator/src/agenteval_json_schema_evaluator/: __init__.py
examples/plugins/agenteval-pattern-presence-evaluator/: README.md  pyproject.toml
examples/plugins/agenteval-pattern-presence-evaluator/src/agenteval_pattern_presence_evaluator/: __init__.py
landing-page/: README.md  index.html  package-lock.json  package.json  playwright.config.mjs  script.js  styles.css
runs/: 20260714T201128Z_04052cd.json  20260714T201812Z_04052cd.json
scripts/: docker_smoke_test.sh
templates/: __init__.py
tests/: test_adapter_contract.py  test_adapter_usage.py  test_agentic_data_analyst_trajectory.py  test_alert_config.py  test_alerts.py  test_audit.py  test_audit_config.py  test_autogen_adapter.py  test_calibration.py  test_ci_matrix.py  test_ci_workflow.py  test_cli_agents.py  test_cli_audit_hooks.py  test_cli_audit_log.py  test_cli_calibrate.py  test_cli_compare_alerts.py  test_cli_compare_gates.py  test_cli_encoding.py  test_cli_generate_adversarial.py  test_cli_generate_cases_failures.py  test_cli_history.py  test_cli_plugins.py  test_cli_report.py  test_cli_serve.py  test_cli_templates.py  test_cli_trace.py  test_compare.py  test_compare_significance.py  test_config.py  test_conversation.py  test_cost_attribution.py  test_crewai_adapter.py  test_dashboard_flakiness.py  test_dashboard_run_selection.py  test_dashboard_trajectory.py  test_dataset_import.py  test_docker.py  test_evaluator_plugins.py  (+37 more)
(+55 files in other folders)
