[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nishanttyagi-agenteval"
dynamic = ["version"]
description = "CI-integrated evaluation harness for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nishant Tyagi" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyYAML>=6.0,<7",
  "pandas>=2.2,<4",
  "streamlit>=1.59,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
crewai = [
  "crewai>=1,<2",
]
autogen = [
  "autogen-agentchat>=0.7,<1",
]
openai-agents = [
  "openai-agents>=0.18,<1",
]

[project.scripts]
agenteval = "agenteval.cli:main"

[project.urls]
Homepage = "https://github.com/nishanttyagi28/agenteval"
Repository = "https://github.com/nishanttyagi28/agenteval"
Issues = "https://github.com/nishanttyagi28/agenteval/issues"

[tool.setuptools]
packages = [
  "agenteval",
  "agenteval.adapters",
  "agenteval.core",
  "agenteval.dashboard",
]
package-dir = { agenteval = "." }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "agenteval.__version__" }

[tool.setuptools.package-data]
agenteval = [
  "agents.yaml",
  "baselines/*.json",
  "tests/golden/*.yaml",
  "tests/adversarial/*.yaml",
]
