[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-json-schema-evaluator"
version = "0.1.0"
description = "Example AgentEval plugin: validate agent JSON output against a schema subset"
requires-python = ">=3.10"
dependencies = [
  "nishanttyagi-agenteval>=0.1.0",
]

[project.entry-points."agenteval.evaluators"]
json_schema = "agenteval_json_schema_evaluator:evaluate"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
