[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-pattern-presence-evaluator"
version = "0.1.0"
description = "Example AgentEval plugin: required/forbidden keyword and regex checks"
requires-python = ">=3.10"
dependencies = [
  "nishanttyagi-agenteval>=0.1.0",
]

[project.entry-points."agenteval.evaluators"]
pattern_presence = "agenteval_pattern_presence_evaluator:evaluate"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
